Fix issues with stripped whitespace in production builds. Also remember to upload svg.
FossilOrigin-Name: 623d53c5f620f9e3ab9020f980c2273fcd1e309a7e840db60b5bfcd1a7ec97dd

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ header {
 }
 
 .shell {
+    margin: 0;
     padding: 8px;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
